Use a list rather than a select for the events area

--- a/css/styles.css
+++ b/css/styles.css
@@ -131,8 +131,16 @@ body {
   overflow-y: scroll;
 }
 
+.scroll-div-y {
+  overflow-y: scroll;
+}
+
 .expand-height {
   height: 100vh;
+}
+
+.events-area-item {
+  padding: 3px 10px
 }
 
 #main-div {
